[gd_scene load_steps=12 format=3 uid="uid://btxgdgjef53lx"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_u73lf"]
[ext_resource type="FontFile" uid="uid://bafn8mqjjtnfp" path="res://assets/fonts/karmatic-arcade/ka1.ttf" id="2_42q4b"]
[ext_resource type="FontFile" uid="uid://y1gcmddq3xmk" path="res://assets/fonts/pixel-game/Pixel Game.otf" id="2_axbef"]
[ext_resource type="Script" path="res://scripts/button.gd" id="3_mgy6r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kbvn"]
bg_color = Color(1.92523e-07, 0.6967, 0.609499, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyps2"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_a4ito"]
font = ExtResource("2_42q4b")
font_color = Color(1, 0.0862745, 1, 1)

[sub_resource type="Animation" id="Animation_0tsso"]
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_7hg7m"]
resource_name = "TEXT_GROW"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xflhx"]
_data = {
"RESET": SubResource("Animation_0tsso"),
"TEXT_GROW": SubResource("Animation_7hg7m")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsr3k"]
bg_color = Color(0.838796, 0.412165, 0.798583, 1)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_u73lf")

[node name="ScorePanel" type="Panel" parent="."]
anchors_preset = -1
anchor_right = 0.36
offset_right = 512.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6kbvn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.5
offset_right = 85.5
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 35
text = "SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
offset_top = 153.0
offset_right = 799.0
offset_bottom = 356.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yyps2")

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -31.0
offset_right = 70.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(70, 31)
size_flags_vertical = 0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_a4ito")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverPanel/Label"]
libraries = {
"": SubResource("AnimationLibrary_xflhx")
}

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 532.0
offset_top = 369.0
offset_right = 757.0
offset_bottom = 418.0
theme_override_colors/font_color = Color(0.683357, 0.401027, 0.188056, 1)
theme_override_colors/font_outline_color = Color(0.603922, 0, 0.760784, 1)
theme_override_fonts/font = ExtResource("2_axbef")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_bsr3k")
text = "Play Again"
script = ExtResource("3_mgy6r")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
